--- a/src/pages/404.astro
+++ b/src/pages/404.astro
@@ -11,7 +11,7 @@ const images = import.meta.glob<{ default: ImageMetadata }>(
 
 <Layout>
     <div class="flex flex-col md:flex-row gap-4 items-center justify-center h-full w-full">
-        <Image src={images["/src/assets/images/general/kitty.gif"]()} width={300} height={300} class="rounded-md" alt="Kitty 404" />
+        <Image src={images["/src/assets/images/general/404.png"]()} width={300} height={300} class="rounded-md" alt="Kitty 404" />
         <div class="rounded-lg border border-(--border) bg-(--card) text-(--card-foreground) shadow-sm flex h-96 w-96 flex-col items-center justify-center">
             <div class="text-2xl font-semibold mb-2 flex flex-col items-center justify-center">
                 <Icon name="lucide:shield-x" class="w-14 h-14" />
