--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -5,6 +5,7 @@ import { join as pathJoin } from "node:path";
 import { ClientRouter } from "astro:transitions";
 import Loader from "@components/Loader.astro";
 import Header from "@components/Header.astro";
+import TabBar from "@components/TabBar.astro"; // <-- Import TabBar
 
 import "@styles/global.css";
 import "@styles/default.css";
@@ -18,19 +19,20 @@ readdir(pathJoin("src", "styles", "themes"), { encoding: "utf-8" }, (err, files)
 <html lang="en">
     <head>
         <Loader transition:persist />
-		<meta charset="UTF-8" />
-		<meta name="viewport" content="width=device-width" />
-		<link rel="icon" href="/favicon.png" />
-		<meta name="generator" content={Astro.generator} />
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width" />
+        <link rel="icon" href="/favicon.png" />
+        <meta name="generator" content={Astro.generator} />
         <title>Radius</title>
         <ClientRouter fallback="animate" />
-	</head>
+    </head>
     <body class="h-full w-full bg-(--background) font-inter">
         <Header />
+        <TabBar /> <!-- Add TabBar here -->
         <div class="h-full w-full fixed bg-(--background) text-(--foreground)">
             <slot />
         </div>
-	</body>
+    </body>
 </html>
 
 <style>
